feat: add Filter for command